k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: codl-service
  namespace: codl
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: codl
  type: ClusterIP
