k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codl-ingress
  namespace: codl
spec:
  rules:
    - host: www.codl.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: codl-service
                port:
                  number: 80
